src/objects/RulesDeactivateSwitch__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>It is used to deactivate Workflows and Validation Rules</description>
    <fields>
        <fullName>Account_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PC Switch</label>
        <type>Checkbox</type>
    </fields>
    <label>RulesDeactivateSwitch</label>
</CustomObject>